# lab-1-sorting

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
